tests/ui/codegen/mir/validation/tail_call_validate.mir
//@compile-flags: --pass dce
@module TailCallValidate

fn @callee(arg0: u256) {
  bb0:
    stop
}

//~? ERROR: [fn1] tail_call to `callee` passes 0 argument(s), expected 1
fn @wrongArity() {
  bb0:
    tail_call fn0
}

//~? ERROR: [fn2] tail_call targets nonexistent function fn9
fn @unknownTarget() {
  bb0:
    tail_call fn9
}

//~? ERROR: [fn3] internal_call targets nonexistent function fn9
fn @unknownInternalTarget() {
  bb0:
    internal_call fn9, 0
    stop
}
